Added value objects.

--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,7 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "ramsey/uuid": "^4.4"
+    }
 }
